tests/error/template_ternary.gw
// [contains] invalid expression for function call
function<~A~> void test(A a){}

(maybe ? test : test)(1);
